# funle_backend

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  certificate-chain.pem  docker-compose.yaml  ignore.txt  nginx.conf  private-key.pem
admin/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
admin/pages/: _app.tsx  _document.tsx  cources.tsx  index.tsx  tests.tsx
admin/styles/: globals.css
certs/: certificate-chain.pem  key.pem  private-key.pem  public-key.pem
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--2003961891827439744.wt  collection-0--7573738911886356333.wt  collection-2--2003961891827439744.wt  collection-2--7573738911886356333.wt  collection-4--2003961891827439744.wt  collection-4--7573738911886356333.wt  collection-6--7573738911886356333.wt  collection-7--2003961891827439744.wt  collection-8--7573738911886356333.wt  index-1--2003961891827439744.wt  index-1--7573738911886356333.wt  index-3--2003961891827439744.wt  index-3--7573738911886356333.wt  index-5--2003961891827439744.wt  index-5--7573738911886356333.wt  index-6--2003961891827439744.wt  index-7--7573738911886356333.wt  index-8--2003961891827439744.wt  index-9--2003961891827439744.wt  index-9--7573738911886356333.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2023-06-09T14-19-24Z-00000  metrics.2023-06-09T14-19-29Z-00000  metrics.2023-06-09T16-41-52Z-00000  metrics.2023-06-09T16-47-31Z-00000  metrics.2023-06-09T16-55-28Z-00000  metrics.2023-06-09T16-57-05Z-00000  metrics.2023-06-09T17-00-55Z-00000  metrics.2023-06-09T17-02-06Z-00000  metrics.2023-06-09T17-06-33Z-00000  metrics.2023-06-09T17-08-57Z-00000  metrics.2023-06-09T17-21-50Z-00000  metrics.2023-06-09T17-22-22Z-00000  metrics.2023-06-09T17-22-42Z-00000  metrics.2023-06-12T07-19-58Z-00000  (+20 more)
src/: main.rs
(+62 files in other folders)
