[package]
name = "math_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
uuid = "1.2.2"
mongodb = "2.3.0"
rocket = {version="0.5.0-rc.2", features=["json"]}
serde = {version = "1.0", features=["derive"]}
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
thiserror = "1.0.37"
bcrypt = "0.13.0"
time = {version = "0.3.17", features=["serde"]}
serde_json = "1.0.87"
sha256 = "1.1.1"
rand = "0.8.5"
tokio = "1.22.0"
serde_with = "2.1.0"
